turtleart.lessons.turtleart.Main.CircleYing.scala.error
Source:2: error: Missing closing brace `}' assumed here
override def run() {
^Source:2: error: expected start of definition
override def run() {
         ^Source:16: error: Missing closing brace `}' assumed here
}
^